...
    HStack(spacing: 20) {
        CompactRecordingButton(isRecording: .constant(false)) {
            print("Start")
        }
        
        CompactRecordingButton(isRecording: .constant(true)) {
            print("Stop")
        }
    }
}


